--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,16 @@
 --title-h2-3-color: #212121;
 --title-btn-color: #FFFFFF;
 }
+p, h1, h2, h3 {
+margin:0;
+}
+ul {
+margin:0;
+padding-left:0;
+}
+img {
+    display: block;
+}
 body{
    font-family: 'Roboto', sans-serif;
    color: var(--main-text-color);
@@ -13,13 +23,25 @@ body{
 .list {
     list-style: none;
 }
+.container {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+   
+}
+.header{
+    padding-top: 24px;
+    padding-bottom: 25px;
+}
 .logo { font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
     color: #000000;
 }
-.logo-web { color:#2196F3;}
+.logo-web { color:#2196F3;
+}
 
 .header-link {
     font-weight: 500;
@@ -44,6 +66,42 @@ color: #2196F3;
     letter-spacing: 0.02em;
     color: var(--main-text-color);
 }
+.header-list {display: flex;
+margin-left: 93px;}
+.header-address {display: flex;
+margin-left: auto;}
+.header-nav { display: flex; align-items: center;}
+.header-list .header-item:not(:last-child) { margin-right:  50px;}
+.header-address .header-item:not(:last-child) {
+    margin-right: 50px;
+}
+.section-after-hero {
+    display: flex;
+}
+.section-sub-text {
+    width: calc(100%-90px)/4;
+}
+
+.caption-foto { display: flex;}
+.box-foto {margin-right: 30px;}
+/*.section-subtitle {
+text-align: center
+}*/
+
+/*.margin-right: 30px; */
+.section-team-foto { display: flex;}
+.section-after-hero .section-sub-text {
+    margin-right: 30px;
+}
+.team-foto { margin-right: 30px; }
+
+.title {
+background-color: #2F303A;
+text-align: center;
+padding-top: 200px;
+padding-bottom: 200px;
+
+} 
 
 .section-title {
 background-color: #2F303A;
@@ -54,22 +112,42 @@ text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
 color: var(--title-btn-color);
+margin-bottom: 30px;
+/*не розумію чому не центрується H1*/
+text-align: center;
+max-width: 696px;
 }
 
+.section-btn {
+    display: block;
+    margin: 0 auto;
+}
 .section-btn {
         background: #2196F3;
         font-weight: 700;
         font-size: 16px;
         line-height: 1.88;
         display: flex;
+
         align-items: center;
         text-align: center;
         letter-spacing: 0.06em;
-        color: var(--title-btn-color);
+        color: var(--title-btn-color); 
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        padding: 10px 32px;
+    
 }
 /*  не могу понять почему не работает hover и focus на кнопке....  */
 .section-btn :hover {
     color: aquamarine;
+    display: block;
+    margin: 0 auto;
+   
+}
+.after-hero {
+    padding-top: 86px;
+    padding-bottom: 86px;
 }
 .section-subtitle {
     font-weight: 700;
@@ -78,13 +156,27 @@ color: var(--title-btn-color);
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--title-h2-3-color);
+    margin-bottom: 11.58px;
+
+    text-align: center
 }
 .section-text{
     font-size: 14px;
     line-height: 1.71;
+
+}
+.section-container {
+    padding-bottom: 86px;
 }
 .section-team {
     background: #F5F4FA;
+    padding-top: 94px;
+    padding-bottom: 94px;
+
+}
+.caption-name {
+    margin-top: 30px;
+    margin-bottom: 10px;
 }
 .caption {
 font-weight: 700;
@@ -93,6 +185,7 @@ line-height: 1.17;
 text-align: center;
 letter-spacing: 0.03em;
 color: var(--title-h2-3-color);
+margin-bottom: 50px;
 }
 .caption-name {
 font-weight: 500;
@@ -110,6 +203,14 @@ color: var(--title-h2-3-color);
     letter-spacing: 0.03em;
     color: var(--main-text-color);
 }
+.footer {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    background: #2F303A;
+}
+.adress-block{
+    padding-top: 20px;
+}
 /*  без стиля normal текст адреса становился italic */
 .footer-address {
     font-style: normal;
@@ -119,6 +220,9 @@ color: var(--title-h2-3-color);
     letter-spacing: 0.03em;
     color: var(--title-btn-color);
     background: #2F303A;
+
+    margin-bottom: 9px;
+
 }
 .footer-mail, .footer-tel {
 font-style: normal;
@@ -128,6 +232,7 @@ line-height: 1.71;
 letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6);
 background: #2F303A;
+margin-bottom: 9px;
 }
 .portfolio-subtitle {
 font-weight: 700;
