--- a/css/styles.css
+++ b/css/styles.css
@@ -92,16 +92,16 @@ margin-left: auto;}
     display: flex;
 }
 .section-sub-text {
-    width: calc(100%-90px)/4;
+    width: calc((100% - 90px)/4);
 }
 .portfolio-list {display: flex;
 flex-wrap: wrap;
 gap: 30px;}
-.portfolio-block {
+/*.portfolio-block {
    max-width: 370px }
 .portfolio-block {
-    width: calc(100%-20px)/3;
-}
+    width: calc((100% - 20px)/3);
+}*/
 
 .caption-foto { display: flex;}
 .box-foto {margin-right: 30px;}
@@ -139,6 +139,7 @@ max-width: 696px;
 .section-btn {
     display: block;
     margin: 0 auto;
+    margin-top: 30px;
 }
 .section-btn {
         background: #2196F3;
@@ -180,6 +181,7 @@ max-width: 696px;
 .section-text{
     font-size: 14px;
     line-height: 1.71;
+    letter-spacing: 0.03em;
 
 }
 .section-container {
@@ -281,6 +283,7 @@ color: var(--title-h2-3-color);
     line-height: 1.88;
     letter-spacing: 0.03em;
     color: var(--main-text-color);
+    margin-top: 4px;
 }
 .portfolio-button {
     font-family: 'Roboto';
@@ -293,15 +296,23 @@ color: var(--title-h2-3-color);
 /* color: var(--title-h2-3-color); */
     border-radius: 4px;
     border-color: #F5F4FA ;
+   
 
-    margin-bottom: 50px;
+
+/* margin-bottom: 50px;*/
 }
 
 .first-button { display: flex;
-justify-content: center}
-.portfolio-button  { margin-right: 9px;} 
+justify-content: center;
+margin-bottom: 50px;}
+.portfolio-button  { 
+    padding-top: 6px;
+    padding-bottom: 6px; 
+    padding-left: 22px;
+    padding-right: 22px;} 
 .portfolio-button :last-child { margin-right: 0;}
 
+.rst-button { margin: 8px;}
 
 .portfolio-button :hover {
 color: var(--title-btn-color);
@@ -309,9 +320,12 @@ background: #2196F3;
 }
 
 .port-subtitle {
-    max-width: 320px;
+    
     padding-top: 20px;
     padding-bottom: 20px;
+    padding-left: 24px;
+    padding-right: 24px;
+    border: 1px solid #EEEEEE;
 }
 .visually-hidden {
     position: absolute;
