--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,12 @@ margin-left: auto;}
 .header-address .header-item:not(:last-child) {
     margin-right: 50px;
 }
+.header-border{
+border: 1px solid #ECECEC;
+}
+
+.caption-address-icon:current(color)
+
 .section-after-hero {
     display: flex;
 }
@@ -191,6 +197,9 @@ max-width: 696px;
     letter-spacing: 0.03em;
 
 }
+.section-after-hero{
+    display: flex;
+}
 
 /* .section-sub-text::before {
     display: block;
@@ -277,8 +286,8 @@ width: 44px; height: 44px; border-radius: 50%;
     align-items: center;
     justify-content: center;
 }
-.caption-soc-link :hover,
-.caption-soc-link :focus {
+.caption-soc-link:hover,
+.caption-soc-link:focus {
 background-color: #2196F3;
 }
 .caption-soc-link:hover .caption-soc-icon,
@@ -288,7 +297,7 @@ fill: #FFFFFF;
 .caption-address-icon {
     fill: #757575;
 }
-.caption-address-icon :hover {
+.caption-address-icon:hover {
     fill: #2196F3;
 }
 .const {
@@ -306,10 +315,15 @@ justify-content: center;
 display: flex;
 margin-right: 30px;
 }
+
 .icon-const-client {
 fill: #AFB1B8;}
-.const-link :hover{
-    fill: #2196F3;
+
+.icon-const-client:hover {
+fill: #2196F3;
+}
+.const-li:hover {
+    border: 1px solid #2196F3;
 }
 .footer {
     padding-top: 60px;
@@ -330,7 +344,7 @@ padding: 12px 30px;
 }
 /*  без стиля normal текст адреса становился italic */
 .const-client {
-    padding-top: 248px;
+    padding-top: 94px;
     padding-bottom: 94px;
    
 }
@@ -384,7 +398,7 @@ padding-bottom: 94px; }
 .footer-soc-icon{
     fill: #FFFFFF;
 }
-.footer-soc-item{
+.footer-soc-link{
 width: 44px;
 height: 44px;
 border-radius: 50%;
@@ -444,9 +458,8 @@ gap: 8px;}
 color: white;
 background: #2196F3;
 }
-.portfolio-block :hover {
+.portfolio-block:hover {
     background: #FFFFFF;
-    border: 1px solid #EEEEEE;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
