--- a/css/styles.css
+++ b/css/styles.css
@@ -67,12 +67,26 @@ color: #2196F3;
  .header-list .header-link.current {
      color: #2196F3;
  }
- .header-address :hover, .header-address :focus {
-    color: #2196F3;
- }
 
-.header-mail, .header-tel
-{
+ /*.header-address :hover, .header-address :focus {
+    color: #2196F3;
+ }*/
+
+.header-mail:hover, .header-mail:focus 
+ { color: #2196F3; }
+ .header-mail:hover .caption-address-icon,
+ .header-mail:focus .caption-address-icon {
+    fill: #2196F3;
+}
+.header-tel:hover,
+.header-tel:focus {
+    color: #2196F3;}
+
+.header-tel:hover .caption-address-icon,
+.header-tel:focus .caption-address-icon {
+    fill: #2196F3;}
+
+.header-mail, .header-tel{
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -92,7 +106,7 @@ margin-left: auto;}
 border: 1px solid #ECECEC;
 }
 
-.caption-address-icon:current(color)
+
 
 .section-after-hero {
     display: flex;
@@ -297,9 +311,9 @@ fill: #FFFFFF;
 .caption-address-icon {
     fill: #757575;
 }
-.caption-address-icon:hover {
+/*.caption-address-icon:hover {
     fill: #2196F3;
-}
+}*/
 .const {
     display: flex;
     align-items: center;
@@ -318,30 +332,38 @@ margin-right: 30px;
 
 .icon-const-client {
 fill: #AFB1B8;}
-
+/*
 .icon-const-client:hover {
 fill: #2196F3;
 }
 .const-li:hover {
     border: 1px solid #2196F3;
 }
+*/
+.const-li:hover, .const-li:focus {
+    border: 1px solid #2196F3;
+}
+.const-li:hover .icon-const-client, 
+.const-li:focus .icon-const-client {
+fill: #2196F3;
+}
 .footer {
     padding-top: 60px;
-    padding-bottom: 60px;
+    padding-bottom: 20px;
     background: #2F303A;
 }
 .portfolio-footer { 
     padding-top: 60px;
-    padding-bottom: 60px;
+    padding-bottom: 20px;
     background: #2F303A;
 }
 .adress-block{
     padding-top: 20px;
     
 }
-.const-link {
+/*.const-link {
 padding: 12px 30px;
-}
+}*/
 /*  без стиля normal текст адреса становился italic */
 .const-client {
     padding-top: 94px;
